--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,9 @@ retrofit = "3.0.0"
 koinAndroid = "4.1.1"
 kotlinSerialization = "2.3.0"
 kotlinxSerializationCore = "1.9.0"
+gson = "2.13.2"
+okHttpLogging = "4.7.2"
+gsonConverter = "2.9.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -38,6 +41,9 @@ androidx-compose-ui-junit4 = { group = "androidx.compose.ui", name = "ui-test-ju
 androidx-compose-ui-test-manifist = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 
 retrofit2 = { group = "com.squareup.retrofit2", name = "retrofit-bom", version.ref = "retrofit" }
+okhttp-logging = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "okHttpLogging" }
+retrofit2-converter-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "gsonConverter" }
+gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
 
 kotlinx-serialization-core = { module = "org.jetbrains.kotlinx:kotlinx-serialization-core", version.ref = "kotlinxSerializationCore" }
 
